log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: dockersifath/log-output:4.1.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config
              readOnly: true
          readinessProbe:
            httpGet:
              path: /healthz      # your index.js forwards this to pingpong-svc:/pingpong
              port: 3000          # must be CONTAINER port, not 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: config-volume
          configMap:
            name: log-config
            items:
              - key: information.txt
                path: information.txt
