log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31000  # You can now access from browser via localhost:31000
